--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.qsoft</groupId>
-    <artifactId>StringCalculator</artifactId>
+    <artifactId>Calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
